--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1{
-    color: brown;
+    color: rgb(0, 0, 0);
 }
 body{
-    background-color: aquamarine;
+    background-color: rgb(214, 165, 160);
 }
 
